# docker-practice

./: README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  app.py  pyproject.toml
frontend/: .dockerignore  Dockerfile  main.py  pyproject.toml
